# sdd-workflow-kit

./: .gitignore  .gitmodules  LLM_ADAPTATION_PROMPT.md  README.md  THIRD_PARTY_NOTICES.md  action.yml  pyproject.toml
.github/workflows/: smoke-speckit.yml
scripts/: smoke_airis.py  smoke_memory_bank.py  smoke_speckit.py
sddkit/: __init__.py  __main__.py  cli.py  config.py  detect.py  managed.py  skills.py  speckit.py  sync.py  templates.py
sddkit/_templates/en/agents/: AGENTS.airis.md.tmpl  AGENTS.md.tmpl
sddkit/_templates/en/specs/: README.md.tmpl
sddkit/_templates/ru/agents/: AGENTS.md.tmpl
sddkit/_templates/ru/specs/: README.md.tmpl
skillpacks/codex/skills/agents-md/: SKILL.md
skillpacks/codex/skills/branch-cleaner/: SKILL.md
skillpacks/codex/skills/brave-search/: SKILL.md  search.js
skillpacks/codex/skills/bug-triage/: SKILL.md
skillpacks/codex/skills/ci-fix/: SKILL.md
skillpacks/codex/skills/code-review/: SKILL.md
skillpacks/codex/skills/coding-guidelines-gen/: SKILL.md
skillpacks/codex/skills/coding-guidelines-verify/: SKILL.md
skillpacks/codex/skills/commit-work/: SKILL.md
skillpacks/codex/skills/compound-docs/: SKILL.md
skillpacks/codex/skills/create-cli/: SKILL.md
skillpacks/codex/skills/create-pr/: SKILL.md
skillpacks/codex/skills/debug/: SKILL.md
skillpacks/codex/skills/dependency-upgrader/: SKILL.md
skillpacks/codex/skills/doc-query/: SKILL.md  config.yaml
skillpacks/codex/skills/docs-sync/: SKILL.md
skillpacks/codex/skills/file-todos/: SKILL.md
skillpacks/codex/skills/git-workflow/: SKILL.md
(+125 files in other folders)
